theme/static/css/hydroshare_core.css
/* ... */
.login-social li#facebook {
	background: #3B5998;
}
.login-social li#google {
	background: #dd4b39;
}
.login-social li#twitter:hover,
.login-social li#facebook:hover,
.login-social li#google:hover {
    background: none;
}
.login-social li#twitter:hover a {
	color: #1dcaff;
}
.login-social li#facebook:hover a {
	color: #3B5998;
}
.login-social li#google:hover a {
	color: #dd4b39;
}
.login-social li a {
    color: #fff;
	padding: 10px;
}
.login-social li, .login-social li:hover {
    transition: background 0.3s;
    -webkit-transition: background 0.3s;
    -moz-transition: background 0.3s;
}
.login-social li a, .login-social li:hover a:hover{
    transition: color 0.3s;
    -webkit-transition: color 0.3s;
    -moz-transition: color 0.3s;
}
/* ===== Registration form popover ===== */

.signup .popover {
	min-width: 200px;
}

#signup{
    margin-bottom: 10px;
}

/* ===== Site search ===== */

.navbar-nav li#search {
	background: #00B4FF;
	background: linear-gradient(top, #00B4FF, #009DE0);
	background: -webkit-linear-gradient(top, #00B4FF, #009DE0);
	background: -moz-linear-gradient(top, #00B4FF, #009DE0);
	position: relative;
}
.navbar-nav li#search .search-box {
	position: absolute;
	right: 0;
	bottom: -70px;
	width: 250px;
	padding: 10px;
	background: #eaeaea;
	background: rgba(0, 0, 0, 0.65);
	display: none;
}
.navbar-nav li#search i.margin-2 {
	margin-left: 2px;
}

/* ===== Pagination ===== */

.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  background-color: #00B4FF;
  border-color: #00B4FF;
}

/* Helper Classes */

.top-zero {
	margin-top: 0;
}
.bottom-15 {
	margin-bottom: 15px;
}
.ui-icon {
	color: #666;
}
.tab-1 {
	margin-right: 15px;
}
.tab-2 {
	margin-right: 30px;
}
.tab-3 {
	margin-right: 45px;
}
.tab-3 {
	margin-right: 60px;
}

/* Text colors */

.text-green {
	color: #72a53b;
}
.text-blue {
	color: #00B4FF;
}
.text-red {
	color: #E74C3C;
}
.text-turquoise {
	color: #1ABC9C;
}
.text-amethyst {
	color: #9B59B6;
}

/* Background colors */

.bg-green {
	background-color: #72a53b;
}
.bg-blue {
	background-color: #00B4FF;
}
.bg-red {
	background-color: #E74C3C;
}
.bg-turquoise {
	background-color: #1ABC9C;
}
.bg-amethyst {
	background-color: #9B59B6;
}

/* ===== Scroll to Top ===== */

.scrolltotop {
	height: 48px;
	width: 48px;
	border-color: #999;
	border: 1px solid rgba(0, 0, 0, 0.3);
	color: #999;
	color: rgba(0, 0, 0, 0.3);
	font-size: 18px;
	line-height: 38px;
	border-radius: 3px;
	text-align: center;
    background: rgba(255, 255, 255, 0.5);
}
/* ===== Resource edit page changes ===== */

#contact-table .icon-button{
    float:left;
    background-color: transparent;
    border: 0;
}

#contact-table .icon-button{
    float:left;
    background-color: transparent;
    border: 0;
    text-decoration: none;
}

#txt-abstract{
    height: 155px;
}

span.remove{
    position: absolute;
    left: 0;
    height: 100% !important;
    background: #EEE;
    top: 0;
}

.form-control{
    margin-bottom:8px;
}

.no-padding{
    padding:0;
}

.icon-remove{
    font-size: 17px;
    top: 3px;
    left: 6px;
    color: rgb(217, 83, 79);
    cursor:pointer;
}

.icon-add{
    font-size: 17px;
    top: 3px;
    left: 1px;
    color: #5cb85c;
    cursor:pointer;
}

.icon-add:hover{
    color: #47a447;
}

.icon-remove:hover{
    color: rgb(168, 69, 66);
}

#panel-left{
    padding-right:8px;
    padding-left:0;
    margin-bottom: 10px;
}

#panel-right{
    padding-left:8px;
    padding-right:0;
    margin-bottom: 10px;
}
#add-keyword-wrapper{
    width: 200px;
    display: inline-flex;
}


#relatedResourcesTab{
    overflow:hidden;
}

#comments{
    padding-bottom: 15px;
    margin-top: 20px;
}

.info-group table td{
    padding-left:15px;
}

#resourceSpecificTab{
    overflow-x:hidden;
}

#variables .custom-well {
	height: 180px;
	overflow: auto;
	background-color:#FFF;
}

#variables .custom-well > strong{
	font-size:18px;
}

#variables {
	max-height: 600px;
	overflow:auto;
	border-radius: 0;
}

#netcdf-header-info {
    margin-bottom: 20px;
    border: 1px solid #ddd;
    width: 100%;
	padding: 10px;
}

#resourceSpecificTab input.form-control[type='radio'], #resourceSpecificTab input.form-control[type='checkbox'] {
	box-shadow: none;
}
.custom-table th {
	padding-right: 40px;
}
#txt-title{
    /*width: calc(100% - 10px);*/
    font-size: 27px;
    /*margin-bottom: 30px;*/
    height: auto;
}

#txt-abstract{
    height: 155px;
}

span.remove {
	position: absolute;
	left: 0;
	top: 0;
	height: calc(100% - 2px) !important;
	background: #EEE;
	background-position-y: 7px !important;
	margin: 1px;
}

.form-control{
    margin-bottom:8px;
}

.no-padding{
    padding:0;
}

.icon-remove{
    font-size: 17px;
    top: 3px;
    left: 6px;
    color: rgb(217, 83, 79);
    cursor:pointer;
}

.icon-add{
    font-size: 17px;
    top: 3px;
    left: 1px;
    color: #5cb85c;
    cursor:pointer;
}

.icon-add:hover{
    color: #47a447;
}

.icon-remove:hover{
    color: rgb(168, 69, 66);
}

#panel-left{
    padding-right:8px;
    padding-left:0;
    margin-bottom: 10px;
}

#panel-right{
    padding-left:8px;
    padding-right:0;
    margin-bottom: 10px;
}
#add-keyword-wrapper{
    width: 200px;
    display: inline-flex;
}


/* ===== Resource UI changes ===== */
html, body{
    height:100%;
    /*background:#F4F4F4;*/
}

a[data-toggle='tab']{
    /*display: inline-block !important;*/
    overflow: hidden !important;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#btn-public.active {
    color: #FFF;
    background: #5cb85c;
    border-color: #20833F;
}

#btn-private.active {
    color: #FFF;
    background: #d9534f;
    border-color: #8C3C3A;
}

#btn-discoverable.active {
    color: #FFF;
    background: #f0ad4e;
    border-color: #CB7904;
}
/* ... */

